k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: clientelle
  name: clientelle
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: clientelle
    weight: 100
